--- a/react-nextjs/package.json
+++ b/react-nextjs/package.json
@@ -11,24 +11,24 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "konsta": "^1.0.2",
-    "next": "latest",
+    "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.42.1",
-    "socket.io-client": "^4.6.0"
+    "react-hook-form": "^7.43.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
+    "@types/node": "^12.20.55",
+    "@types/react": "^17.0.53",
+    "@types/react-dom": "^17.0.19",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.8.3"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5"
   }
 }
