--- a/Examen_IIB/react-nextjs/package.json
+++ b/Examen_IIB/react-nextjs/package.json
@@ -1,22 +1,20 @@
 {
   "private": true,
   "scripts": {
-    "dir": "dir",
-    "hola": "echo 'HOLA1'",
-    "dir-hola": "npm run dir && npm run hola",
-    "hola-mundo": "dir && echo 'HOLA2'",
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "proxy": "http://localhost:11203"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "axios": "^1.3.4",
     "konsta": "^1.0.2",
-    "next": "^13.1.6",
+    "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
@@ -24,12 +22,12 @@
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
-    "@types/node": "^12.20.55",
-    "@types/react": "^17.0.53",
-    "@types/react-dom": "^17.0.19",
+    "@types/node": "^12.12.21",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5"
+    "typescript": "^4.8.3"
   }
 }
